--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8" />
+    <title>Мой сайт на GitHub Pages</title>
+</head>
+<body>
+    <h1>Привет, мир!</h1>
+    <p>Это мой первый сайт, размещённый на GitHub Pages.</p>
+</body>
+</html>
 
