--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8" />
-    <title>Мой сайт на GitHub Pages</title>
+  <meta charset="UTF-8" />
+  <title>OTA обновление</title>
 </head>
 <body>
-    <h1>Привет, мир!</h1>
-    <p>Это мой первый сайт, размещённый на GitHub Pages.</p>
+  <h1>Обновление прошивки OTA</h1>
+  <p>Загрузите последнюю версию прошивки на ваше устройство по ссылке:</p>
+  <a href="https://ваш_логин.github.io/my-website/firmware/firmware_v1.2.bin" download>Скачать прошивку v1.2</a>
 </body>
 </html>
-
