--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
   <h1>Обновление прошивки OTA</h1>
   <p>Загрузите последнюю версию прошивки на ваше устройство по ссылке:</p>
-  <a href="https://ваш_логин.github.io/my-website/firmware/firmware_v1.2.bin" download>Скачать прошивку v1.2</a>
+  <a href="https://Yury-BY.github.io/my-website/firmware/firmware_v1.2.bin" download>Скачать прошивку v1.2</a>
 </body>
 </html>
